WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192535
Safe browsing warning should layout buttons vertically in narrow WKWebViews
https://bugs.webkit.org/show_bug.cgi?id=192535
Summary
Safe browsing warning should layout buttons vertically in narrow WKWebViews
Alex Christensen
Reported
2018-12-08 21:27:23 PST
Safe browsing warning should stack buttons in narrow WKWebViews
Attachments
Patch
(3.62 KB, patch)
2018-12-08 21:30 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(3.66 KB, patch)
2018-12-10 08:55 PST
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-12-08 21:30:55 PST
Created
attachment 356905
[details]
Patch
Alex Christensen
Comment 2
2018-12-10 08:55:12 PST
Created
attachment 356963
[details]
Patch
Alex Christensen
Comment 3
2018-12-10 12:57:07 PST
http://trac.webkit.org/r239044
Radar WebKit Bug Importer
Comment 4
2018-12-10 12:58:29 PST
<
rdar://problem/46605329
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug