Safe browsing warning should layout buttons vertically in narrow WKWebViews https://bugs.webkit.org/show_bug.cgi?id=192535 <rdar://problem/46308364>

Reviewed by Tim Horton.

They're usually next to each other, but in narrow WKWebViews they currently get clipped.
In order to make it more likely that both buttons are completely visible, put one above
the other if the WKWebView is too narrow to completely show both.  This also helps with
languages where the translations of "Go Back" or "Show Details" are rendered wider than English.

* UIProcess/Cocoa/WKSafeBrowsingWarning.mm:
(buttonWidth):
(-[WKSafeBrowsingWarning addContent]):



Canonical link: https://commits.webkit.org/207139@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239044 268f45cc-cd09-0410-ab3c-d52691b4dbfc